Index event cards as clickable

--- a/source/_sass/_cards.scss
+++ b/source/_sass/_cards.scss
@@ -20,6 +20,10 @@
   @include breakpoint($small-only) {
     grid-template-columns: 1fr;
   }
+
+  .card-link-wrapper {
+    text-decoration: none;
+  }
 }
 
 /* GLOBAL Card Styles */
