--- a/source/_includes/components/generic-card-layout.html
+++ b/source/_includes/components/generic-card-layout.html
@@ -18,14 +18,14 @@
   <div class="cards-wrapper">
     {% for card in cards%}
     <div class="card card--research">
-      <div class="card__icon" style="background-image: url({{ card.card_icon.url }})"></div>
-      <div class="card__detail">
-        <a href="{{ card.pretty_url | prepend: 'products/' | relative_url }}">
+      <a class="card-link-wrapper" href="{{ card.pretty_url | prepend: 'products/' | relative_url }}">
+        <div class="card__icon" style="background-image: url({{ card.card_icon.url }})"></div>
+        <div class="card__detail">
           <span class="card__title">{{ card.title }}</span>
-        </a>
-        <span class="card__subtitle">{{ card.subtitle }}</span>
-        <span class="card__author">{{ card.full_author }}</span>
-      </div>
+          <span class="card__subtitle">{{ card.subtitle }}</span>
+          <span class="card__author">{{ card.full_author }}</span>
+        </div>
+      </a>
     </div>
     {% endfor %}
   </div>
@@ -45,21 +45,21 @@
   <div class="cards-wrapper">
     {% for card in cards %}
     <div class="card card--people">
-      <div class="card__avatar-wrapper">
-        <div class="card__avatar">
-          <img
-            src="{{card.photo.url}}"
-            alt="{{card.display_name}} Image"
-          />
+      <a class="card-link-wrapper" href="{{ card.pretty_url | prepend: '/our-people/' | relative_url }}">
+        <div class="card__avatar-wrapper">
+          <div class="card__avatar">
+            <img
+              src="{{card.photo.url}}"
+              alt="{{card.display_name}} Image"
+            />
+          </div>
+          <div class="bar" style="background-image: url({{ card.bar_color.url }})"></div>
         </div>
-        <div class="bar" style="background-image: url({{ card.bar_color.url }})"></div>
-      </div>
-      <div class="card__detail">
-        <a href="{{ card.pretty_url | prepend: '/our-people/' | relative_url }}">
+        <div class="card__detail">
           <span class="card__name">{{ card.display_name }}</span>
-        </a>
-        <span class="card__title">{{ card.title }}</span>
-      </div>
+          <span class="card__title">{{ card.title }}</span>
+        </div>
+      </a>
     </div>
     {% endfor %}
   </div>
@@ -77,6 +77,7 @@
   <div class="cards-wrapper">
     {% for card in card_data.cards %}
     <div class="card card--event">
+      
       <div
         class="card__image"
         style="background-image: url('https://i.picsum.photos/id/1019/5472/3648.jpg?hmac=2mFzeV1mPbDvR0WmuOWSiW61mf9DDEVPDL0RVvg1HPs')"
@@ -105,16 +106,16 @@
   <div class="cards-wrapper">
     {% for card in cards %}
     <div class="card card--project">
-      <div
-        class="card__image"
-        style="background-image: url({{card.project_image.url}})"
-      ></div>
-      <div class="card__detail">
-        <a href="{{ card.pretty_url | prepend: 'projects/' | relative_url }}">
+      <a class="card-link-wrapper" href="{{ card.pretty_url | prepend: 'projects/' | relative_url }}">
+        <div
+          class="card__image"
+          style="background-image: url({{card.project_image.url}})"
+        ></div>
+        <div class="card__detail">
           <span class="card__title">{{ card.title }}</span>
-        </a>
-        <span class="card__description">{{ card.blurb }}</span>
-      </div>
+          <span class="card__description">{{ card.blurb }}</span>
+        </div>
+      </a>
     </div>
     {% endfor %}
   </div>
