--- a/source/_layouts/topic.html
+++ b/source/_layouts/topic.html
@@ -11,7 +11,7 @@ top_bar: white
   {% include components/nav-button.html %}
   <div class="row expanded page-section--topic top-section section--gray" style="background-image: url({{ page.header_beam.url }})">
     <div class="column large-5 medium-12 small-12">
-      <span class="heading-start">Engleberg Center on:</span>
+      <span class="heading-start">Engelberg Center on:</span>
       <h1>{{ page.title }}</h1>
       <div class="bar" style="background-image: url({{ page.bar_color.url }})"></div>
       <div class="markdown-secondary">
