--- a/source/_sass/_products.scss
+++ b/source/_sass/_products.scss
@@ -121,45 +121,40 @@
       }
 
       .markdown-table-toggle {
-        @include page-section-padding;
-        padding-top: 0;
-        padding-bottom: 1rem;
-
+        color: #707070;
+        padding-left: 6rem;
         @include breakpoint($medium-only) {
-          padding-top: 2rem;
-          padding-bottom: 1.5rem;
+          padding: 1rem 2rem;
         }
 
-        @include breakpoint($small-only) {
-          padding-top: 0;
-          padding-bottom: 1rem;
-        }
-
-        font-family: $serif;
+        font-family: $sans-serif;
         font-size: $p;
         font-weight: bold;
 
         i {
           vertical-align: middle;
           padding-right: 2px;
+          pointer-events: none;
         }
       }
 
-      .d3-chart .table__body {
-        transition: height .5s ease;
-        overflow: hidden;
+      .chart-container > .table__body {
+        transition: height 0.5s ease;
+        overflow: auto;
         width: 100%;
       }
 
-      .d3-chart .table__body:not(.active) {
+      .chart-container > .table__body:not(.active) {
         display: none;
       }
 
       .table {
+        overflow-x: auto;
         padding: 1rem 0;
 
         &__title {
           font-weight: bold;
+          font-family: $sans-serif;
         }
 
         &__body {
@@ -168,13 +163,13 @@
             font-family: $sans-serif;
             font-size: 1.1rem;
 
-            tr:nth-child(odd) {
-              background-color: #eef1f7;
-            }
+            // tr:nth-child(odd) {
+            //   // background-color: #eef1f7;
+            // }
 
-            tr:nth-child(even) {
-              background-color: #f9fafc;
-            }
+            // tr:nth-child(even) {
+            //   // background-color: #f9fafc;
+            // }
 
             tr {
               text-align: left;
@@ -183,7 +178,6 @@
                 font-weight: bold;
                 padding: 1rem;
                 border-bottom: 2px solid;
-                background-color: $gray-200;
               }
 
               td {
@@ -194,6 +188,25 @@
         }
       }
 
+      table {
+        color: #707070;
+        th {
+          font-weight: 700;
+          text-align: left;
+        }
+        thead tr {
+          border-bottom: solid 2px #707070;
+          th {
+            padding: 4px 0;
+          }
+        }
+        tbody tr {
+          border-bottom: dotted 2px #707070;
+          td {
+            padding: 4px 0;
+          }
+        }
+      }
       .product-code {
         margin-top: 3rem;
       }
@@ -231,7 +244,6 @@
         }
       }
     }
-
   }
 
   blockquote:not(.pull-quote) {
