--- a/source/_includes/components/form.html
+++ b/source/_includes/components/form.html
@@ -42,7 +42,7 @@
       <div class="response" id="mce-success-response" style="display:none"></div>
     </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
       <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_fd77b1cbdc6e203814ed46c7a_0bb7830d93" tabindex="-1" value=""></div>
-      <div class="clear"><input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+      <div class="clear"><input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button plausible-event-name=Button+Click"></div>
       </div>
   </form>
   </div>
